# Translation-methods

./: .gitignore  README.md
lab1/postfix/: CMakeLists.txt  lexer.cpp  symbol.cpp
lab1/postfix/src/: emitter.cpp  init.cpp  main.cpp  parser.cpp  symbol.cpp
lab1/prefix/: CMakeLists.txt  parser.cpp
lab1/prefix/src/: emitter.cpp  global.h  init.cpp  lexer.cpp  main.cpp  parser.cpp  symbol.cpp
lab2/: CMakeLists.txt  checker.cpp  generator.cpp  main.cpp
